[+] Implemented ECS system

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,15 +4,29 @@ project(bomberman)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR})
 set(CMAKE_CXX_STANDARD 20)
 
+include_directories(Include)
+
 add_executable(bomberman
         Include/Bomberman.hpp
 
         Source/main.cpp
 
         Source/Bomberman.cpp
-        )
+        Include/raylib/Window.cpp
+        Include/raylib/Window.hpp
+        Include/ECS/Ecs.hpp
+        Include/Components/PositionComponent.cpp
+        Include/Components/PositionComponent.hpp
+        Include/ECS/Manager.cpp
+        Include/ECS/Manager.hpp
+        Include/ECS/Entity.cpp
+        Include/ECS/Entity.hpp
+        Include/ECS/Component.cpp
+        Include/ECS/Component.hpp)
 
 
 set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/lib/raylib/)
 set(OpenGL_GL_PREFERENCE LEGACY)
 find_package(raylib REQUIRED QUIET)
+
+target_link_libraries(bomberman raylib)
