Refactor: manager now has all the variables to load scenes, quit button implemented and game scene load started

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,7 +37,7 @@ add_executable(bomberman
         Include/raylib/Vector3D.hpp
         Include/raylib/Vector2D.cpp
         Include/raylib/Vector2D.hpp
-        Include/Components/BasicCubeComp.cpp Include/Components/BasicCubeComp.hpp)
+        Include/Components/BasicCubeComp.cpp Include/Components/BasicCubeComp.hpp Source/Scenes/GameScene.cpp)
 
 
 set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/lib/raylib/)
