[+] Generating floor, working on walls and obstacles

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,7 +27,7 @@ add_executable(bomberman
         Include/raylib_encap/Window.hpp
         Include/ECS/Ecs.hpp
         Source/Components/TransformComp.cpp
-        Include/Components/TransformComp.hpp
+        Include/Components/3D/TransformComp.hpp
         Source/ECS/Manager.cpp
         Include/ECS/Manager.hpp
         Source/ECS/Entity.cpp
@@ -37,18 +37,18 @@ add_executable(bomberman
         Include/Scene.hpp
 
         Source/Components/Sprite2D.cpp
-        Include/Components/Sprite2D.hpp
+        Include/Components/GUI/Sprite2D.hpp
 
         Source/Scenes/MainMenuScene.cpp
         Include/Components/Components.h
         Source/Components/ButtonComp.cpp
-        Include/Components/ButtonComp.hpp
+        Include/Components/GUI/ButtonComp.hpp
         Source/raylib_encap/Math/Vector3D.cpp
         Include/raylib_encap/Math/Vector3D.hpp
         Source/raylib_encap/Math/Vector2D.cpp
         Include/raylib_encap/Math/Vector2D.hpp
         Source/Components/BasicCubeComp.cpp
-        Include/Components/BasicCubeComp.hpp
+        Include/Components/3D/BasicCubeComp.hpp
         Source/Scenes/GameScene.cpp
         Source/raylib_encap/ESprite.cpp
         Include/raylib_encap/ESprite.hpp
@@ -66,13 +66,13 @@ add_executable(bomberman
         Include/raylib_encap/Input/EGamepadInputModule.hpp
         Include/Keys.h
         Source/Components/MovementComp.cpp
-        Include/Components/MovementComp.hpp
+        Include/Components/Character/MovementComp.hpp
         Source/raylib_encap/Input/AInputModule.cpp
         Include/raylib_encap/Input/AInputModule.hpp
         Source/raylib_encap/EText.cpp
         Include/raylib_encap/EText.hpp
         Include/Colors.h
-        Source/raylib_encap/ECube.cpp Include/raylib_encap/ECube.hpp)
+        Source/raylib_encap/ECube.cpp Include/raylib_encap/ECube.hpp Source/Scenes/MapComponent.cpp Source/Scenes/MapComponent.hpp Source/raylib_encap/Math/Random.cpp Include/raylib_encap/Math/Random.hpp)
 
 
 set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/lib/raylib/)
