--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -108,7 +108,7 @@ add_executable(bomberman
         Source/Components/BombComp.cpp
         Include/Components/BombComp.hpp
         Include/Components/Player.hpp
-        )
+        Source/Scenes/OptionScene.cpp Source/Components/OptionComp.cpp Source/Components/OptionComp.hpp)
 
 
 set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/lib/raylib/)
