--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.17)
 project(bomberman)
 if (CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
     # using Clang
-    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")
+    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Werror")
 
 elseif (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
     # using GCC
