--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -173,7 +173,7 @@ find_package(raylib REQUIRED QUIET)
 set(Boost_USE_STATIC_LIBS OFF)
 set(Boost_USE_MULTITHREADED ON)
 set(Boost_USE_STATIC_RUNTIME OFF)
-find_package(Boost 1.71.0 COMPONENTS filesystem archive)
+find_package(Boost 1.71.0 REQUIRED COMPONENTS filesystem serialization)
 
 if(Boost_FOUND)
     include_directories(${Boost_INCLUDE_DIRS})
