--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -172,7 +172,8 @@ add_executable(bomberman
         Source/Components/EFramesModel.hpp
         Include/Components/3D/FramesModel.cpp
         Include/Components/3D/FramesModel.hpp
-        )
+        Source/raylib_encap/EiaInputModule.cpp
+        Include/EiaInputModule.hpp)
 
 #raylib
 set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/lib/raylib/)
